# telegram

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: check-lint-test.yaml
examples/: async_send.rs  blocking_send.rs  html_alert.rs  markdown_v2_error.rs  plain_alert.rs
src/: async_bot.rs  blocking_bot.rs  error.rs  lib.rs  message.rs
