[package]
name = "telegram"
version = "0.1.0"
edition = "2024"
description = "Small Telegram Bot API sendMessage client and safe message builders"
license = "MIT"
repository = "https://github.com/ultrasoundmoney/telegram"

[features]
default = ["async"]
async = ["dep:reqwest", "dep:tokio"]
blocking = ["dep:ureq"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telegram-sanitize = { git = "https://github.com/ultrasoundmoney/telegram-sanitize", rev = "5719c09b027f84f99556752ab9911e02e18c62c0" }
tokio = { version = "1", features = ["time"], optional = true }
ureq = { version = "3.3", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
